2002-10-30 Jackson Harper <jackson@latitudegeo.com>

	* CompilerError: Added class
	
2002-10-19  Rachel Hestilow <hestilow@ximian.com>

	* CSharpCodeProvider.cs
	(GeneratePropertySetValueReferenceExpression): Implement.
	(GenerateField, GenerateMethod): Only call OutputAttributeDeclarations
	if there are any attributes.
	(GenerateProperty): Implement.
	 
2002-10-11  Duncan Mak  <duncan@ximian.com>

	* CSharpCodeProvider.cs: Fix constructor visibility.

2002-05-28  Daniel Stodden <stodden@in.tum.de>

	* ChangeLog: added

	* CSharpCodeProvider.cs: added

	* CSharpCodeGenerator.cs: C# Code Generator. Not fully complete
	but doing fairly well.

